Fixed overflow subscribed animation

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -182,6 +182,7 @@ header{
             border-radius: 50px;
             background:$red-grad2;
             transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
+            overflow-x: hidden;
           
             &:hover{
                 background:$red-grad1;
